Fix wrong splitting of entry path

REVIEW: 123223
BUG: 344614